<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="project.nitpicar.CreateAccountActivity">

    <LinearLayout
        android:id="@+id/activity_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/edit_email_crAccount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password_crAccount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/edit_vehicle_num"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/vehicle_number"
            android:inputType="text" />
        <EditText
            android:id="@+id/edit_vehicle_type"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/vehicle_type"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_regisToNit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/roundbutton"
            android:text="@string/register_to_nitpicar"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>