<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263234"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="project.nitpicar.LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/btn_email_sign_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundbutton"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/logo" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="#cecece" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_with_email"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_transparent"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:onClick="onClick"/>
</LinearLayout>
